# jscc

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: automerge.yml  ci.yml  lint.yml
docs/: changelog.rst  conf.py  index.rst
docs/api/testing/: traversal.rst
jscc/: exceptions.py  schema.py
jscc/testing/: checks.py  filesystem.py  json.py  schema.py  traversal.py  util.py
tests/: __init__.py  test_checks.py  test_schema.py  test_util.py
tests/cassettes/test_util/: test_http_get_error.json  test_http_head_error.json
tests/fixtures/schema/: codelist_enum.json  merge_properties.json  null_type.json
